--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,6 +18,19 @@
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
+          <div class="activity-card">
+            <h4>Activity Name</h4>
+            <p>Activity Description</p>
+            <!-- New section for participants -->
+            <div class="participants">
+              <h5>Participants:</h5>
+              <ul>
+                <li>Participant 1</li>
+                <li>Participant 2</li>
+                <li>Participant 3</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
